syntax = "proto3";

package proto;

option go_package = "./taas_leveldb";
// option cc_generic_services = true;
// import "transaction.proto";

enum OpType {
  Read = 0;
  Insert = 1;
  Update = 2;
  Delete = 3;
}

message KvDBData {
  OpType op_type = 1;
  string key = 2;
  string value = 3;
  uint64 csn = 4;
}

message KvDBRequest {
  repeated KvDBData data = 1;
};

message KvDBResponse {
  bool result = 1;
  repeated KvDBData data = 2;
};

service KvDBGetService {
  rpc Get(KvDBRequest) returns (KvDBResponse);
};

service KvDBPutService {
  rpc Put(KvDBRequest) returns (KvDBResponse);
};

